# garmin-ai-chat

./: .env.example  .gitignore  CLAUDE.md  Garmin_AI_Chat_API.postman_collection.json  Garmin_AI_Chat_Local.postman_environment.json  Makefile  POSTMAN_TESTING_GUIDE.md  RAG_CHAT_GUIDE.md  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  test_chat.py  test_tuesday_fix.py
.claude/ref/: activity_ingestion.py  conversation_service.py  embeddings.py  llm_service.py  main.py  temporal_processor.py  vector_db.py
alembic/: env.py
alembic/versions/: ace1f49c61c5_create_initial_database_schema.py  b7d2e8a4f9c6_add_conversation_tables.py  d85347b4bc45_add_background_tasks_table_for_async_.py
src/: main.py
src/api/: activities.py  auth.py  chat.py  dependencies.py  health.py  sync.py  tasks.py
src/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
src/db/: base.py  models.py  repositories.py
src/schemas/: activity.py  auth.py  background_task.py  chat.py  common.py  sync.py  user.py
src/services/: activity_ingestion.py  activity_views.py  auth.py  background_task.py  conversation.py  embedding.py  fitness_metrics.py  garmin.py  llm.py  sync.py  temporal_processor.py  user_cleanup.py  vector_db.py
src/utils/: metrics.py
tests/: conftest.py  test_activity_views.py  test_temporal_processor.py
